non-msrv-tests/tests/ui/default.stderr
error: `default` is only supported if `Default` is being implemented
 --> tests/ui/default.rs:4:17
  |
4 |     #[derive_where(default)]
  |                    ^^^^^^^
